<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="yearViewModel"
            type="com.example.planerapplication.viewmodel.YearViewModel" />
    </data>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.tabs.FragmentYear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutChoseYear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgViewPrevious"
                android:layout_width="7dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{()->yearViewModel.onPreviousClicked()}"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/txtYear"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/tab_year"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imgViewNext"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{()->yearViewModel.onNextClicked()}"
                android:src="@drawable/ic_next" />
        </LinearLayout>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="3"
            app:layout_constraintTop_toBottomOf="@+id/layoutChoseYear"
            app:rowCount="4">

            <Button
                android:id="@+id/btnJan"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:text="@string/jan"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25sp"
                android:onClick="@{(view)->yearViewModel.onMonthClick(view)}"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/btnFeb"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:text="@string/feb"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25sp"
                android:onClick="@{(view)->yearViewModel.onMonthClick(view)}"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/btnMart"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:text="@string/mar"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25sp"
                android:onClick="@{(view)->yearViewModel.onMonthClick(view)}"
                app:layout_column="2"
                app:layout_columnWeight="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/btnApr"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:text="@string/apr"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25sp"
                android:onClick="@{(view)->yearViewModel.onMonthClick(view)}"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/btnMay"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:text="@string/may"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25sp"
                android:onClick="@{(view)->yearViewModel.onMonthClick(view)}"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/btnJune"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:text="@string/june"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25sp"
                android:onClick="@{(view)->yearViewModel.onMonthClick(view)}"
                app:layout_column="2"
                app:layout_columnWeight="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/btnJuly"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:text="@string/july"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25sp"
                android:onClick="@{(view)->yearViewModel.onMonthClick(view)}"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/btnAvg"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:text="@string/aug"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25sp"
                android:onClick="@{(view)->yearViewModel.onMonthClick(view)}"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/btnSep"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:text="@string/sep"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25sp"
                android:onClick="@{(view)->yearViewModel.onMonthClick(view)}"
                app:layout_column="2"
                app:layout_columnWeight="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/btnOct"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:text="@string/oct"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25sp"
                android:onClick="@{(view)->yearViewModel.onMonthClick(view)}"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/btnNov"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:text="@string/nov"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25sp"
                android:onClick="@{(view)->yearViewModel.onMonthClick(view)}"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/btnDec"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:text="@string/dec"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25sp"
                android:onClick="@{(view)->yearViewModel.onMonthClick(view)}"
                app:layout_column="2"
                app:layout_columnWeight="1"
                app:layout_row="3" />
        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>