<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.tabs.FragmentToday"
        android:id="@+id/fragmentToday"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <LinearLayout
                android:id="@+id/taskEventLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/list_of_tasks_txt_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/list_of_tasks"
                    android:textAlignment="viewStart"
                    android:textColor="?colorOnSecondary"
                    android:textSize="25sp"
                    android:textStyle="bold" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewTasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/no_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/no_tasks_string"
                    android:textAlignment="center"
                    android:textColor="?colorOnSecondary"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/list_of_events_txt_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/list_of_events"
                    android:textAlignment="viewStart"
                    android:textColor="?colorOnSecondary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/no_events"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/no_events_string"
                    android:textAlignment="center"
                    android:visibility="gone"
                    android:textColor="?colorOnSecondary"
                    android:textSize="20sp"
                    android:textStyle="italic" />


            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>